--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import "./assets/fonts/digital-font.css";
+@import "./assets/fonts/digital-7/digital-font.css";
+@import "./assets/fonts/encode-sans/encode-sans.css";
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: encode-sans;
+  font-weight: 600;
 }
